# clitest

./: .gitignore  Cargo.toml  FRUITDATA_DOCS.md  FUTURE_VERSION.md  INIT_CATALOG_POPUP.md  README.md
src/: error.rs  main.rs  ui.rs
src/app/: events.rs  mod.rs  state.rs
src/ui/: mod.rs  modal.rs  render.rs
