[package]
name = "clitest"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.29", features = ["all-widgets"] }
color-eyre = "0.6"

# Use Git dependency pointing at the `fruitcrate` branch of the public repo
fruitdata = { git = "https://github.com/hugosc/fruitdata.git", branch = "fruitcrate" }
